--- a/public/index.html
+++ b/public/index.html
@@ -5,24 +5,45 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description"
-      content="Landy is a free React landing page template designed for developers and startups." />
-    <meta name="keywords"
-      content="Landy is a free React landing page template designed for developers and startups." />
-    <meta property="og:title" content="Landy - React Template" />
+    <meta
+      name="description"
+      content="BitBadges is an extension of BitClout that allows any user to issue badges to any other user."
+    />
+    <meta
+      name="keywords"
+      content="BitBadges is an extension of BitClout that allows any user to issue badges to any other user."
+    />
+    <meta property="og:title" content="BitBadges" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://landy.website/" />
-    <meta property="og:description"
-      content="Landy is a free React landing page template designed for developers and startups." />
+    <meta
+      property="og:url"
+      content="https://github.com/trevormil/bitbadgesfrontend"
+    />
+    <meta
+      property="og:description"
+      content="BitBadges is an extension of BitClout that allows any user to issue badges to any other user."
+    />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
-    <meta property="og:site_name" content="Landy" />
-    <meta property="og:url" content="https://landy.website/" />
-    <meta property="twitter:title" content="Landy - React Template" />
-    <meta property="twitter:description"
-      content="Landy is a free React landing page template designed for developers and startups." />
-    <meta property="twitter:site" content="https://landy.website/" />
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet" async />
+    <meta property="og:site_name" content="BitBadges" />
+    <meta
+      property="og:url"
+      content="https://github.com/trevormil/bitbadgesfrontend"
+    />
+    <meta property="twitter:title" content="BitBadges" />
+    <meta
+      property="twitter:description"
+      content="BitBadges is an extension of BitClout that allows any user to issue badges to any other user."
+    />
+    <meta
+      property="twitter:site"
+      content="https://github.com/trevormil/bitbadgesfrontend"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap"
+      rel="stylesheet"
+      async
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -32,7 +53,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Landy - React Template</title>
+    <title>BitBadges</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
