changed ui to use usernames from public keys

--- a/public/index.html
+++ b/public/index.html
@@ -54,10 +54,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>BitBadges</title>
+    <script src="login.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <iframe
+      id="identity"
+      frameborder="0"
+      src="https://identity.bitclout.com/embed"
+      style="height: 100vh; width: 100vw; display: none"
+    ></iframe>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
